--- a/InplayBet.Web/Views/MemberProfile/Index.cshtml
+++ b/InplayBet.Web/Views/MemberProfile/Index.cshtml
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <div class="red-box">
+            @*<div class="red-box">
                 <div class="blk-bg">
                     <h3 class="blk-heading2">Challenge 20 - Lost</h3>
                     <a href="#" class="report-btn">report</a>
@@ -176,7 +176,7 @@
                         Won
                     </p>
                 </div>
-            </div>
+            </div>*@
         </div>
 
 
