--- a/InplayBet.Web/Styles/style.css
+++ b/InplayBet.Web/Styles/style.css
@@ -128,8 +128,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 .mp-block .blk-bg a:hover.report-btn {background:#63b222; color:#fff;}
 
 .mp-block .yellow-box {width:98%; padding:1%; margin:1% 0 0 0; float:left; background:#ffe400;}
-.mp-block .yellow-box .scroll {width:1129px;height:170px;overflow-y:hidden;overflow-x:scroll; margin:25px 0 0 0;}
-.mp-block .yellow-box .outer {width:250%;}
+.mp-block .yellow-box .scroll {width:1129px;overflow-y:hidden;overflow-x:scroll;}
+.mp-block .yellow-box .outer {/*width:250%;*/}
 .mp-block .yellow-box p {margin:0 2% 0 0; padding:0; display:inline; float:left; width:auto; font-size:22px; color:#000; text-align:left; line-height:30px;}
 
 .mp-block .red-box {width:98%; padding:1%; float:left; margin:1% 0 0 0; background:#ff0000;}
@@ -238,16 +238,17 @@ ul.search-filter li a:hover {text-decoration:none; color:#63b222; background:#63
 
 /*------------------------- Popup CSS Start---------------------------------*/
 .popup-outer {width:600px; margin:0 auto; background:#fff; overflow:hidden;}
-.popup-border {margin:10px; border:2px solid #c7c7c7; float:left; width:550px; padding:10px;}
+.popup-border {margin: 5px 0; border:2px solid #c7c7c7; float:left; width:550px; padding:10px;}
 .popup-border h2 {margin:0; padding:0; font-size:20px; color:#63b222; font-weight:700; text-transform:uppercase;} 
 .popup-border p {font-weight:700; font-size:15px; padding:10px 0;}
 ul.popup {margin:0; padding:0;}
-ul.popup li {margin:5px 0; padding:0; list-style:none; width:100%; float:left;}
-ul.popup li label {float:left; width:22%; font-size:15px; margin:5px 0 0 0; padding:0;}
-ul.popup li input[type="text"] {border:1px solid #d8d8d8; width:25%; padding:1%; font-size:15px; line-height:21px; color:#6a6a6a;}
+ul.popup li {margin:3px 0; padding:0; list-style:none; width:100%; float:left;}
+ul.popup li p{float:none !important;}
+ul.popup li label {float:left; min-width:18%; font-size:13px; margin:5px 0 0 0; padding:0;color:#000}
+ul.popup li input[type="text"] {border:1px solid #d8d8d8; width:19.5%; padding:1%; font-size:15px; line-height:15px; color:#6a6a6a;}
 ul.popup li input[type="text"]:focus {border:1px solid #63b222; -webkit-transition: all 0.4s ease; -moz-transition: all 0.4s ease; transition: all 0.4s ease; background:#f6f7f7;}
-ul.popup li span {padding:0 10px; font-size:15px;}
-ul.popup li input[type="text"].full {border:1px solid #d8d8d8; width:67%; padding:1%; font-size:15px; line-height:21px; color:#6a6a6a;}
+ul.popup li span {padding:0 2px; font-size:15px;font-weight: bold;}
+ul.popup li input[type="text"].full {border:1px solid #d8d8d8; width:50%; padding:1%; font-size:15px; line-height:15px; color:#6a6a6a;}
 ul.popup li input[type="text"].full:focus {border:1px solid #63b222; -webkit-transition: all 0.4s ease; -moz-transition: all 0.4s ease; transition: all 0.4s ease; background:#f6f7f7;}
 ul.popup li input[type="submit"] {display:block; text-align:center; background: #63b222; /* Old browsers */
 background: -moz-linear-gradient(top, #63b222 0%, #3e7b0b 100%); /* FF3.6+ */
@@ -256,7 +257,7 @@ background: -webkit-linear-gradient(top, #63b222 0%,#3e7b0b 100%); /* Chrome10+,
 background: -o-linear-gradient(top, #63b222 0%,#3e7b0b 100%); /* Opera 11.10+ */
 background: -ms-linear-gradient(top, #63b222 0%,#3e7b0b 100%); /* IE10+ */
 background: linear-gradient(to bottom, #63b222 0%,#3e7b0b 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#63b222', endColorstr='#3e7b0b',GradientType=0 ); /* IE6-9 */ color:#fff; font-weight:700; font-size:15px; width:auto; text-transform:uppercase; text-decoration:none; padding:2% 4%; -webkit-transition: all 0.3s ease-in; -moz-transition: all 0.3s ease-in; transition: all 0.3s ease-in; margin:0; cursor:pointer; border:0;}
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#63b222', endColorstr='#3e7b0b',GradientType=0 ); /* IE6-9 */ color:#fff; font-weight:700; font-size:15px; width:auto; text-transform:uppercase; text-decoration:none; padding:1% 2%; -webkit-transition: all 0.3s ease-in; -moz-transition: all 0.3s ease-in; transition: all 0.3s ease-in; margin:0; cursor:pointer; border:0;}
 ul.popup li input[type="submit"]:hover {background: #545455; /* Old browsers */
 background: -moz-linear-gradient(top, #545455 0%, #1b1b1b 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#545455), color-stop(100%,#1b1b1b)); /* Chrome,Safari4+ */
@@ -266,7 +267,7 @@ background: -ms-linear-gradient(top, #545455 0%,#1b1b1b 100%); /* IE10+ */
 background: linear-gradient(to bottom, #545455 0%,#1b1b1b 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#545455', endColorstr='#1b1b1b',GradientType=0 ); /* IE6-9 */}
 
-ul.popup li a.btn {font-size:16px; font-weight:700; color:#fff; text-decoration:none; background:#000; margin:0 0 0 5px; padding:5px 10px;}
+ul.popup li a.btn {font-size:16px; font-weight:700; color:#fff; text-decoration:none; background:#000; margin:0; padding:4px 5px;}
 ul.popup li a.btn:hover {color:#fff; text-decoration:none; background:#63b222;}
 ul.popup li input[type="radio"] {width:5%; margin:9px 0 0 0;}
 
