--- a/InplayBet.Web/Views/MemberProfile/Index.cshtml
+++ b/InplayBet.Web/Views/MemberProfile/Index.cshtml
@@ -1,18 +1,21 @@
-﻿@{
+﻿@using InplayBet.Web.Models
+@using InplayBet.Web.Utilities
+@using System.Globalization
+@model UserModel
+@{
     ViewBag.Title = "Member Profile";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @{Html.RenderPartial("_PageTitle", new ViewDataDictionary { { "Caption", "Member Profile" } });}
 <div class="main-container">
     <div class="container">
         <div class="mp-block">
             <div class="top">
-                <img src="images/profile-img.jpg" alt="">
+                <img width="200" src='@Url.Content(Model.AvatarPath)' alt="">
                 <div class="name-block">
-                    <h4><span>Name:</span> Jimbo Smith</h4>
-                    <p class="member">Member Since: 21-2-15</p>
+                    <h4><span>Name:</span> @Model.UserId</h4>
+                    <p class="member">Member Since: @Model.CreatedOn.ToString("d", new CultureInfo("en-GB"))</p>
                     <p class="join">Ranking: 4</p>
-                    <p class="bookmarker">Bookmarker - Bet365</p>
+                    <p class="bookmarker">Bookmarker - @Model.BookMaker.BookMakerName.ToString()</p>
                 </div>
                 <div class="detail-block">
                     <p class="left">Wins 7</p>
@@ -23,163 +26,7 @@
                     <p class="left">Profit £3791</p>
                 </div>
             </div>
-            <div class="yellow-box">
-                <div class="blk-bg">
-                    <h3 class="blk-heading">Challenge 21 - Inplay</h3>
-                    <a href="#" class="report-btn">report</a>
-                </div>
-                <div class="scroll">
-                    <div class="outer">
-                        <p class="internal">
-                            <strong>Bet 1 Man u vs Arsenal</strong><br>
-                            Man U first Goal<br>
-                            £20 - £24.52<br>
-                            Won
-                        </p>
-                        <p class="internal">
-                            <strong>Bet 1 Man u vs Arsenal</strong><br>
-                            Man U first Goal<br>
-                            £20 - £24.52<br>
-                            Won
-                        </p>
-                        <p class="internal">
-                            <strong>Bet 1 Man u vs Arsenal</strong><br>
-                            Man U first Goal<br>
-                            £20 - £24.52<br>
-                            Won
-                        </p>
-                        <p class="internal">
-                            <strong>Bet 1 Man u vs Arsenal</strong><br>
-                            Man U first Goal<br>
-                            £20 - £24.52<br>
-                            Won
-                        </p>
-                        <p class="internal">
-                            <strong>Bet 1 Man u vs Arsenal</strong><br>
-                            Man U first Goal<br>
-                            £20 - £24.52<br>
-                            Won
-                        </p>
-                        <p class="internal">
-                            <strong>Bet 1 Man u vs Arsenal</strong><br>
-                            Man U first Goal<br>
-                            £20 - £24.52<br>
-                            Won
-                        </p>
-                    </div>
-                </div>
-            </div>
-            @*<div class="red-box">
-                <div class="blk-bg">
-                    <h3 class="blk-heading2">Challenge 20 - Lost</h3>
-                    <a href="#" class="report-btn">report</a>
-                </div>
-                <div class="no-scroll">
-                    <p>
-                        <strong><strong>Bet 1 - Man City vs Burnley</strong></strong><br>
-                        Burnley Clean Sheet<br>
-                        £20 - £25<br>
-                        Won
-                    </p>
-                    <p>
-                        <strong><strong>Bet 2 - Man City vs Burnley</strong></strong><br>
-                        Burnley Clean Sheet<br>
-                        £25 - £32.95<br>
-                        Won
-                    </p>
-                    <p>
-                        <strong><strong>Bet 3 - Man City vs Burnley</strong></strong><br>
-                        Burnley Clean Sheet<br>
-                        £32.95 - £45.34<br>
-                        Lost
-                    </p>
-                </div>
-            </div>
-            <div class="green-box">
-                <div class="blk-bg">
-                    <h3 class="blk-heading2">Challenge 19 - Won</h3>
-                    <a href="#" class="report-btn">report</a>
-                </div>
-                <div class="scroll">
-                    <div class="outer">
-                        <p>
-                            <strong><strong>Bet 1 - Man City vs Burnley</strong></strong><br>
-                            Burnley Clean Sheet<br>
-                            £20 - £25<br>
-                            Won
-                        </p>
-                        <p>
-                            <strong><strong>Bet 1 - Man City vs Burnley</strong></strong><br>
-                            Burnley Clean Sheet<br>
-                            £20 - £25<br>
-                            Won
-                        </p>
-                        <p>
-                            <strong><strong>Bet 1 - Man City vs Burnley</strong></strong><br>
-                            Burnley Clean Sheet<br>
-                            £20 - £25<br>
-                            Won
-                        </p>
-                        <p>
-                            <strong><strong>Bet 1 - Man City vs Burnley</strong></strong><br>
-                            Burnley Clean Sheet<br>
-                            £20 - £25<br>
-                            Won
-                        </p>
-                        <p>
-                            <strong><strong>Bet 1 - Man City vs Burnley</strong></strong><br>
-                            Burnley Clean Sheet<br>
-                            £20 - £25<br>
-                            Won
-                        </p>
-
-                    </div>
-                </div>
-            </div>
-            <div class="red-box">
-                <div class="blk-bg">
-                    <h3 class="blk-heading2">Challenge 18 - Lost</h3>
-                    <a href="#" class="report-btn">report</a>
-                </div>
-                <div class="no-scroll">
-                    <p>
-                        <strong><strong>Bet 1 - Man City vs Burnley</strong></strong><br>
-                        Burnley Clean Sheet<br>
-                        £20 - £25<br>
-                        Won
-                    </p>
-                    <p>
-                        <strong><strong>Bet 1 - Man City vs Burnley</strong></strong><br>
-                        Burnley Clean Sheet<br>
-                        £20 - £25<br>
-                        Won
-                    </p>
-                </div>
-            </div>
-            <div class="promo-bnr"><img src="images/bet-promo-bnr.jpg" alt=""></div>
-            <div class="red-box">
-                <div class="blk-bg">
-                    <h3 class="blk-heading2">Challenge 17 - Lost</h3>
-                    <a href="#" class="report-btn">report</a>
-                </div>
-                <div class="no-scroll">
-                    <p>
-                        <strong><strong>Bet 1 - Man City vs Burnley</strong></strong><br>
-                        Burnley Clean Sheet<br>
-                        £20 - £25<br>
-                        Won
-                    </p>
-                    <p>
-                        <strong><strong>Bet 1 - Man City vs Burnley</strong></strong><br>
-                        Burnley Clean Sheet<br>
-                        £20 - £25<br>
-                        Won
-                    </p>
-                </div>
-            </div>*@
+            @Html.Action("GetChallengesByUser", "Bet", new { userKey = (int)ViewBag.UserKey })
         </div>
-
-
-
     </div>
 </div>
