--- a/InplayBet.Web/Views/Bet/GetBetsByChallenge.cshtml
+++ b/InplayBet.Web/Views/Bet/GetBetsByChallenge.cshtml
@@ -5,12 +5,13 @@
 @{
     Layout = null;
     ChallengeModel currentChallenge = (ChallengeModel)(ViewBag.CurrentChallenge ?? ViewData["CurrentChallenge"]);
-    int userKey = (int)ViewData["UserKey"];
+    int userKey = (int)(ViewBag.UserKey ?? ViewData["UserKey"]);
     List<BetModel> bets = Model.OrderByDescending(x => x.BetId).ToList();
 }
 @functions{
     string GetBetDisplayType(BetModel bet)
     {
+        int userKey = (int)(ViewBag.UserKey ?? ViewData["UserKey"]);
         if (userKey != SessionVeriables.GetSessionData<int>(SessionVeriables.UserKey))
         { return BetDisplayType.Read.ToString(); }
         else
@@ -34,9 +35,9 @@
     if (bets.IndexOf(bet) == 0 && betDisplayMode == BetDisplayType.Read.ToString()
         && IsEnableForNewBet(currentChallenge))
     {
-    <div id="betEntry">
-        @Html.Action("ShowNewBetWindow", "Bet", new { userKey = userKey })
-    </div>
+        <div id="betEntry">
+            @Html.Action("ShowNewBetWindow", "Bet", new { userKey = userKey })
+        </div>
     }
 
     @Html.Partial("ShowNewBetWindow", bet,
