--- a/InplayBet.Web/Views/MemberProfile/Index.cshtml
+++ b/InplayBet.Web/Views/MemberProfile/Index.cshtml
@@ -33,3 +33,5 @@
         </div>
     </div>
 </div>
+@Html.Hidden("CurrentUserKey", SessionVeriables.GetSessionData<int>(SessionVeriables.UserKey), 
+    new { id = "CurrentUserKey" })
