--- a/InplayBet.Web/Views/Shared/_PageTitle.cshtml
+++ b/InplayBet.Web/Views/Shared/_PageTitle.cshtml
@@ -1,4 +1,6 @@
 ﻿@{Layout = null;}
-<div class="page-title">
-    <h2>@ViewData["Caption"]</h2>
+<div class="title-outer">
+    <div class="page-title">
+        <h2>@ViewData["Caption"]</h2>
+    </div>
 </div>
