--- a/InplayBet.Web/Views/Bet/ShowNewBetWindow.cshtml
+++ b/InplayBet.Web/Views/Bet/ShowNewBetWindow.cshtml
@@ -7,146 +7,155 @@
 }
 @if (betDisplayMode == BetDisplayType.Insert.ToString())
 {
-    using (Ajax.BeginForm("InsertNewBet", "Bet", new AjaxOptions { HttpMethod = "POST", OnSuccess="InsertBetSuccessHandler(this)" }, new { id = "frmIndertBet" }))
+    using (Ajax.BeginForm("InsertNewBet", "Bet", new AjaxOptions
     {
-    <div class="popup-border">
-        <ul class="popup">
-            <li>
-                <p>Bet @Model.BetNumber.ToString()</p>
-            </li>
-            <li>
-                <label>Team Names:</label>
-                @Html.HiddenFor(m => m.TeamAId)
-                <input type="text" name="" id="txtTesmA" value="">
-                <a href="#" class="btn">+</a>
-                <span>vs</span>
-                @Html.HiddenFor(m => m.TeamBId)
-                <input type="text" name="" id="txtTesmB" value="">
-                <a href="#" class="btn">+</a>
-            </li>
-            <li>
-                <label>league:</label>
-                @Html.HiddenFor(m => m.LegueId)
-                <input type="text" name="" id="txtLegue" class="full" value="">
-                <a href="#" class="btn">+</a>
-            </li>
-            <li>
-                <label>Bet Type:</label>
-                @Html.TextBoxFor(m => m.BetType, new { @class = "full" })
-            </li>
-            <li>
-                <label>Odds:</label>
-                @Html.TextBoxFor(m => m.Odds, new { @class = "full" })
-            </li>
-            <li>
-                <label>Amount Placed:</label>
-                @Html.TextBoxFor(m => m.BetPlaced, new { @class = "full" })
-            </li>
-            <li>
-                <label>Winning Total:</label>
-                @Html.TextBoxFor(m => m.WiningTotal, new { @class = "full" })
-            </li>
-            <li>
-                <input type="submit" value="submit" name="">
-            </li>
-        </ul>
-    </div>
+        HttpMethod = "POST",
+        OnBegin = "return InsertBetBeforeSend(this)",
+        OnSuccess = "InsertUpdateBetSuccessHandler(data, this)"
+    }, new { id = "frmIndertBet" }))
+    {
+        <div class="popup-border">
+            <ul class="popup">
+                <li>
+                    <p>Bet @Model.BetNumber.ToString()</p>
+                </li>
+                <li>
+                    <label>Team Names:</label>
+                    @Html.HiddenFor(m => m.TeamAId)
+                    <input type="text" name="" id="txtTesmA" value="">
+                    <a href="#" class="btn">+</a>
+                    <span>vs</span>
+                    @Html.HiddenFor(m => m.TeamBId)
+                    <input type="text" name="" id="txtTesmB" value="">
+                    <a href="#" class="btn">+</a>
+                </li>
+                <li>
+                    <label>league:</label>
+                    @Html.HiddenFor(m => m.LegueId)
+                    <input type="text" name="" id="txtLegue" class="full" value="">
+                    <a href="#" class="btn">+</a>
+                </li>
+                <li>
+                    <label>Bet Type:</label>
+                    @Html.TextBoxFor(m => m.BetType, new { @class = "full" })
+                </li>
+                <li>
+                    <label>Odds:</label>
+                    @Html.TextBoxFor(m => m.Odds, new { @class = "full" })
+                </li>
+                <li>
+                    <label>Amount Placed:</label>
+                    @Html.TextBoxFor(m => m.BetPlaced, new { @class = "full" })
+                </li>
+                <li>
+                    <label>Winning Total:</label>
+                    @Html.TextBoxFor(m => m.WiningTotal, new { @class = "full" })
+                </li>
+                <li>
+                    <input type="submit" value="submit" name="">
+                </li>
+            </ul>
+        </div>
 
-    @Html.HiddenFor(m => m.BetId)
-    @Html.HiddenFor(m => m.ChallengeId)
-    @Html.HiddenFor(m => m.BetNumber)
-    @Html.HiddenFor(m => m.BetStatus)
-    @Html.HiddenFor(m => m.StatusId)
-    @Html.HiddenFor(m => m.CreatedBy)
-    @Html.HiddenFor(m => m.CreatedOn)
+        @Html.HiddenFor(m => m.BetId)
+        @Html.HiddenFor(m => m.ChallengeId)
+        @Html.HiddenFor(m => m.BetNumber)
+        @Html.HiddenFor(m => m.BetStatus)
+        @Html.HiddenFor(m => m.StatusId)
+        @Html.HiddenFor(m => m.CreatedBy)
+        @Html.HiddenFor(m => m.CreatedOn)
 
-    @Html.HiddenFor(m => m.Challenge.ChallengeId)
-    @Html.HiddenFor(m => m.Challenge.ChallengeNumber)
-    @Html.HiddenFor(m => m.Challenge.ChallengeStatus)
-    @Html.HiddenFor(m => m.Challenge.UserKey)
-    @Html.HiddenFor(m => m.Challenge.WiningPrice)
-    @Html.HiddenFor(m => m.Challenge.CreatedBy)
-    @Html.HiddenFor(m => m.Challenge.CreatedOn)
-    @Html.HiddenFor(m => m.Challenge.StatusId)
+        @Html.HiddenFor(m => m.Challenge.ChallengeId)
+        @Html.HiddenFor(m => m.Challenge.ChallengeNumber)
+        @Html.HiddenFor(m => m.Challenge.ChallengeStatus)
+        @Html.HiddenFor(m => m.Challenge.UserKey)
+        @Html.HiddenFor(m => m.Challenge.WiningPrice)
+        @Html.HiddenFor(m => m.Challenge.CreatedBy)
+        @Html.HiddenFor(m => m.Challenge.CreatedOn)
+        @Html.HiddenFor(m => m.Challenge.StatusId)
     }
 }
 else
 {
-    using (Ajax.BeginForm("UpdateBetStatus", "Bet", new AjaxOptions { HttpMethod = "POST" }, new { id = "frmUpdateBet" }))
+    using (Ajax.BeginForm("UpdateBetStatus", "Bet", new AjaxOptions
     {
-    <div class="popup-border">
-        <ul class="popup">
-            <li>
-                <p>Bet @Model.BetNumber.ToString()</p>
-            </li>
-            <li>
-                <label><strong>Team Names:</strong></label>
-                @Html.Label(Model.TeamA.TeamName)
-                <label><strong>vs</strong></label>
-                @Html.Label(Model.TeamB.TeamName)
-            </li>
-            <li>
-                <label><strong>league:</strong></label>
-                @Html.Label(Model.Legue.LegueName)
-            </li>
-            <li>
-                <label><strong>Bet Type:</strong></label>
-                @Html.Label(Model.BetType)
-            </li>
-            <li>
-                <label><strong>Odds:</strong></label>
-                @Html.Label(Model.Odds)
-            </li>
-            <li>
-                <label><strong>Amount Placed:</strong></label>
-                <label>@Model.BetPlaced.ToString("C")</label>
-            </li>
-            <li>
-                
-                <label><strong>Winning Total:</strong></label>
-                <label>@Model.WiningTotal.ToString("C")</label>
-            </li>
+        HttpMethod = "POST",
+        OnSuccess = "InsertUpdateBetSuccessHandler(data, this)"
+    }, new { id = "frmUpdateBet" }))
+    {
+        <div class="popup-border">
+            <ul class="popup">
+                <li>
+                    <p>Bet @Model.BetNumber.ToString()</p>
+                </li>
+                <li>
+                    <label><strong>Team Names:</strong></label>
+                    @Html.Label(Model.TeamA.TeamName)
+                    <label><strong>vs</strong></label>
+                    @Html.Label(Model.TeamB.TeamName)
+                </li>
+                <li>
+                    <label><strong>league:</strong></label>
+                    @Html.Label(Model.Legue.LegueName)
+                </li>
+                <li>
+                    <label><strong>Bet Type:</strong></label>
+                    @Html.Label(Model.BetType)
+                </li>
+                <li>
+                    <label><strong>Odds:</strong></label>
+                    @Html.Label(Model.Odds)
+                </li>
+                <li>
+                    <label><strong>Amount Placed:</strong></label>
+                    <label>@Model.BetPlaced.ToString("C")</label>
+                </li>
+                <li>
 
-            @if (betDisplayMode == BetDisplayType.Update.ToString())
-            {
-                <li>
-                    <label>Bet Submited On: @Model.CreatedOn.ToString("dd/MM/yyyy hh:mm tt")</label>
+                    <label><strong>Winning Total:</strong></label>
+                    <label>@Model.WiningTotal.ToString("C")</label>
                 </li>
-                <li>
-                    <input type="submit" value="@StatusCode.Won.ToString()" name="BetStatus"/>
-                    <input type="submit" value="@StatusCode.Lost.ToString()" name="BetStatus"/>
-                </li>
-            }
-            else if (betDisplayMode == BetDisplayType.Read.ToString())
-            {
-                <li>
-                    <label>Bet Submited On: @Model.CreatedOn.ToString("dd/MM/yyyy hh:mm tt")</label>
-                </li>
-                <li>
-                    <label>Bet @Html.Label(Model.BetStatus) On: @Model.UpdatedOn.Value.ToString("dd/MM/yyyy hh:mm tt")</label>
-                </li>
-                <li>
-                    <label><strong>Status:</strong></label>
-                    <label>@Html.Label(Model.BetStatus)</label>
-                </li>
-            }
 
-        </ul>
-    </div>
+                @if (betDisplayMode == BetDisplayType.Update.ToString())
+                {
+                    <li>
+                        <label>Bet Submited On: @Model.CreatedOn.ToString("dd/MM/yyyy hh:mm tt")</label>
+                    </li>
+                    <li>
+                        <input type="submit" value="@StatusCode.Won.ToString()" name="BetStatus" />
+                        <input type="submit" value="@StatusCode.Lost.ToString()" name="BetStatus" />
+                    </li>
+                }
+                else if (betDisplayMode == BetDisplayType.Read.ToString())
+                {
+                    <li>
+                        <label>Bet Submited On: @Model.CreatedOn.ToString("dd/MM/yyyy hh:mm tt")</label>
+                    </li>
+                    <li>
+                        <label>Bet @Html.Label(Model.BetStatus) On: @Model.UpdatedOn.Value.ToString("dd/MM/yyyy hh:mm tt")</label>
+                    </li>
+                    <li>
+                        <label><strong>Status:</strong></label>
+                        <label>@Html.Label(Model.BetStatus)</label>
+                    </li>
+                }
 
-    @Html.HiddenFor(m => m.BetId)
-    @Html.HiddenFor(m => m.TeamAId)
-    @Html.HiddenFor(m => m.TeamBId)
-    @Html.HiddenFor(m => m.LegueId)
-    @Html.HiddenFor(m => m.ChallengeId)
-    @Html.HiddenFor(m => m.BetType)
-    @Html.HiddenFor(m => m.BetNumber)
-    @Html.HiddenFor(m => m.Odds)
-    @Html.HiddenFor(m => m.BetStatus)
-    @Html.HiddenFor(m => m.BetPlaced)
-    @Html.HiddenFor(m => m.WiningTotal)
-    @Html.HiddenFor(m => m.StatusId)
-    @Html.HiddenFor(m => m.CreatedBy)
-    @Html.HiddenFor(m => m.CreatedOn)
+            </ul>
+        </div>
+
+        @Html.HiddenFor(m => m.BetId)
+        @Html.HiddenFor(m => m.TeamAId)
+        @Html.HiddenFor(m => m.TeamBId)
+        @Html.HiddenFor(m => m.LegueId)
+        @Html.HiddenFor(m => m.ChallengeId)
+        @Html.HiddenFor(m => m.BetType)
+        @Html.HiddenFor(m => m.BetNumber)
+        @Html.HiddenFor(m => m.Odds)
+        @Html.HiddenFor(m => m.BetStatus)
+        @Html.HiddenFor(m => m.BetPlaced)
+        @Html.HiddenFor(m => m.WiningTotal)
+        @Html.HiddenFor(m => m.StatusId)
+        @Html.HiddenFor(m => m.CreatedBy)
+        @Html.HiddenFor(m => m.CreatedOn)
     }
 }
