--- a/InplayBet.Web/Views/MemberProfile/Index.cshtml
+++ b/InplayBet.Web/Views/MemberProfile/Index.cshtml
@@ -6,17 +6,17 @@
     ViewBag.Title = "Member Profile";
 }
 @section PageScript {
-    @Html.RenderStyles("~/Styles/CommonStyle")
+    @Html.RenderScripts("~/Scripts/ChallengeScript")
 }
 @{Html.RenderPartial("_PageTitle", new ViewDataDictionary { { "Caption", "Member Profile" } });}
 <div class="main-container">
     <div class="container">
         <div class="mp-block">
             <div class="top">
-                <img width="200" src='@Url.Content(Model.AvatarPath)' alt="">
+                <img width="150" src='@Url.Content(Model.AvatarPath)' alt="">
                 <div class="name-block">
                     <h4><span>Name:</span> @Model.UserId</h4>
-                    <p class="member">Member Since: @Model.CreatedOn.ToString("d", new CultureInfo("en-GB"))</p>
+                    <p class="member">Member Since: @Model.CreatedOn.ToString("d")</p>
                     <p class="join">Ranking: 4</p>
                     <p class="bookmarker">Bookmarker - @Model.BookMaker.BookMakerName.ToString()</p>
                 </div>
