--- a/InplayBet.Web/Views/Ranking/Index.cshtml
+++ b/InplayBet.Web/Views/Ranking/Index.cshtml
@@ -1,237 +1,65 @@
 ﻿@{
     ViewBag.Title = "Ranking";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var data = Enumerable.Range(1, 50).ToList();
 }
+@functions {
+    string getClassName(int index)
+    {
+        return ((index + 1) % 3) == 0 ? "class=last" : "";
+    }
+
+    string getStringFromIndex(int index)
+    {
+        int ind = (index + 1);
+        switch (ind)
+        {
+            case 1:
+                return ind.ToString() + "st";
+            case 2:
+                return ind.ToString() + "nd";
+            default:
+                return ind.ToString() + "th";
+        }
+    }
+}
+
 @{Html.RenderPartial("_PageTitle", new ViewDataDictionary { { "Caption", "Ranking" } });}
 <div class="main-container">
     <div class="container">
         <ul class="leadbroad-block">
-            <li>
-                <div class="position">1st</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="position">2nd</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
+            @foreach (var ind in data)
+            {
+                <li @getClassName(data.IndexOf(ind))>
+                    <div class="position">@getStringFromIndex(data.IndexOf(ind))</div>
+                    <div class="leaderblock">
+                        <h3 class="blue-heading">Member Profile</h3>
+                        <div class="block-top">
+                            <img src='@Url.Content("~/Styles/images/leadboard-sh-img.jpg")' alt="">
+                            <h4>John Smith</h4>
+                            <p class="member">Member Since: 21-2-15</p>
+                            <p class="join">Ranking: 4</p>
+                            <div class="clear"></div>
+                            <div class="points">
+                                <p class="left">Wins - 7</p>
+                                <p class="right">Losses - 18</p>
+                            </div>
+                            <div class="points">
+                                <p class="left">Won - £7144</p>
+                                <p class="right">Lost - £360</p>
+                            </div>
+                            <div class="points points-botm">
+                                <p class="left">Winning Bets</p>
+                                <p class="right">Profit</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </li>
-            <li class="last">
-                <div class="position">3rd</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="position">4th</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="position">5th</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="last">
-                <div class="position">6th</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="position">7th</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="position">8th</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="last">
-                <div class="position">9th</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
+                </li>
+            }
         </ul>
-        <div class="promo-bnr"><img src="images/bet-promo-bnr.jpg" alt=""></div>
+
+        <div class="promo-bnr">
+            <img src='@Url.Content("~/Styles/images/bet-promo-bnr.jpg")' alt="">
+        </div>
     </div>
 </div>
