--- a/InplayBet.Web/Views/Shared/_TopNavigation.cshtml
+++ b/InplayBet.Web/Views/Shared/_TopNavigation.cshtml
@@ -1,4 +1,8 @@
-﻿@{Layout = null;}
+﻿@using InplayBet.Web.Utilities
+@{
+    Layout = null;
+    int isLoggedInUser = SessionVeriables.GetSessionData<int>(SessionVeriables.UserKey);
+}
 <div class="nav-container">
     <div class="center">
         <ul class="nav">
@@ -8,7 +12,14 @@
             <li>@Html.ActionLink("Latest Bets", "Index", "LatestBets", new { area = "" }, null)</li>
             <li>@Html.ActionLink("Latest Winners", "Index", "LatestWinners", new { area = "" }, null)</li>
             <li>@Html.ActionLink("Member Search", "Index", "MemberSearch", new { area = "" }, null)</li>
-            <li>@Html.ActionLink("Sign Up", "Index", "RegisterUser", new { area = "" }, null)</li>
+            @if (isLoggedInUser > 0)
+            {
+                <li>@Html.ActionLink("My Profile", "Index", "MemberProfile", new { area = "" }, null)</li>
+            }
+            else
+            {
+                <li>@Html.ActionLink("Sign Up", "Index", "RegisterUser", new { area = "" }, null)</li>
+            }
             <li>@Html.ActionLink("Contact Us", "Index", "ContactUs", new { area = "" }, null)</li>
         </ul>
     </div>
